--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PaymentQR"
-            android:label="Order Payment"></activity>
+        <activity android:name=".MemberOrderItem"></activity>
+        <activity
+            android:name=".PaymentQR"
+            android:label="Order Payment" />
         <activity
             android:name=".OrderActivity"
             android:label="Order Summary" />
